# Falcom

./: .gitignore  README.md
3rd Kuro/: 3rd.dsw  3rd.h  3rd.opt  3rd.rc  3rdDlg.cpp  3rdDlg.h  AS04540.h  MS04450.h  StdAfx.h
3rdText/: 123.bat  3rdText.cpp  3rdText.dsp  3rdText_WAPI_src.7z  LzmaDec.c  inc_header.h
Decompiler/: 3rdEffectFile.py  ActionHelper.py  BattleActionScript.py  BattleMonsterStatus.py  ED6FCScenarioScript.py  ED6ScenarioHelper.py  EDAOScenaFile.py  FieldAttackChr.py  NameList2py.py  ScenarioScript.py  cleanup.bat  declallms.bat  extractsame.py
Decompiler2/: .env  test.py
ED63Loader/: 7zAlloc.h  ED63Loader.opt  ED63Loader.sln  ED63Loader.vcproj  Encoder.dsp  a.bat  bin2h.bat
ED6Back/: ED6Back.cpp  ED6Back.dsp  ED6Back.opt
ED6DatCreator/: 123123.asm  4670.rar  AS04540C.asm  AS04670 .asm  AS04750 .asm  AS14800 .asm  BS00039 ._DT  BS00039 .asm  ED6DatCreator.dsp  EDC.CPP  bak_20110531.7z  cl.bat  ogg.dsw.lnk  test.bat  unnamed.asm  万象天引.asm  凯文.asm  新建文件夹.rar  桌面.rar  瞬移.asm  神罗天征.asm  钢盔回旋踢.asm
ED6Extract/: ED6Extract.dsp  ED6Extract.dsw  ED6Extract.opt  ED6Extractor.cpp  ext_main.cpp
ED6FC Steam/: DWriteRender.cpp  dinput8.cpp  ed6fc.cpp  ed6fc.def  ed6fc.vcxproj  steam_api.cpp
ED6Steam/: README.md
ED6Walk/: ED6Walk.cpp  ED6Walk.dsp  ED6Walk.dsw  ED6Walk.opt  ED6Walk.sln  ED6Walk.vcxproj  UCHDec.dsp  UCHDec.vcxproj  UCI2UCH.CPP  UCI2UCH.dsp  UCI2UCH.vcxproj
ED8/cle_decrypt/: Cargo.toml
ED8/cle_decrypt/src/: main.rs
EDAO/: Battle.cpp  EDAO.dsp  EDAO.sln  EDAO.vcxproj  Global.cpp  Sound.cpp  SoundArc.cpp  edao_vm.h  xxoo.hpp
(+6364 files in other folders)
