[package]
name = "cle_decrypt"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
blowfish = "0.9.1"
byteorder = "1.4.3"
cipher = { version = "0.4.4", features = ["std"] }
clap = { version = "4.3.23", features = ["derive"] }
ctr = "0.9.2"
ml = { version = "0.1.0", path = "../../../../Rust/ml", features = ["io"] }
walkdir = "2.3.3"
zstd = "0.12.4"
